sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:4: error: ')' expected but ',' found.
    for (i <- 0, (n-2)) {
               ^AlgBubbleSort2:4: error: illegal start of simple expression
    for (i <- 0, (n-2)) {
                      ^